src/frontend/src/style/index.less
@import (once, css) "pure-min.css";
@import (once, css) "./grids-responsive-min.css";
@import (once, css) "./pure_tweaks.css";
@import (once, css) "./fonts.css";
@import (once, css) "./loading_anim.css";

@hover_bg_color: #edf3fb;
@selected_bg_color: #dde3eb;
@sal_blue: #0063a7;
@border_radius: .4rem;
@link_blue: rgb(0, 0, 238);

*, html, body {
    font-family: Lato, Arial;
    /*font-weight: 300;*/
}

.preload_lato_bold{
    font-family: Lato;
    font-weight:bold;
}

.mobile_only{
    display:none;
}

h1{
    text-align:center;
    font-weight: normal;
    color: @sal_blue;
    font-size: 4em;
}

p{
    font-size:2em;
}

hr{
    border-top: 1px solid #585757;
    width:80%;
    margin-left:10%;
	margin-top:30px;
	margin-bottom:30px;
}

.rec_courses{
    h1{
        font-size:2em;
    }
}

.login_form{
    input{
        width:95%;
    }
    .button-large, p{
        font-size:1.8em;
    }
}

.question_small{
    .question{
        margin-top:initial;

        h1{
            font-size:2em;
        }

        .answer{
            font-size: 2em;
        }

        .answer{
            padding-left: 2.5em;
            padding-right: 2.5em;
        }

    }
}

.take_test_prompt{
    text-align:center;

    h1{
        font-size:2em;
    }

    .take_test_button{
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        cursor: pointer;
        font-size: 2em;
        font-weight:bold;
        height: 5em;
        line-height: 6em;
        padding-top:1.5em;
        padding-bottom:1.5em;
        padding-left:2em;
        padding-right:2em;
        color: @sal_blue;
        margin-bottom: 1.0rem;
        border: 1px solid;
        border-radius: @border_radius;
    }
}

.question{
    margin-top: 100px;
	margin-bottom: 50px;
    text-align:center;

    .answer{
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        cursor:pointer;
        color:black;
        font-size: 2.5em;
        border: 1px solid #585757;
        border-radius: @border_radius;
        text-align:center;
        padding-left:10px;
        padding-right:10px;
        padding-top:15px;
        padding-bottom:15px;
        margin-bottom:15px;

        &:hover{
            /*background-color: @hover_bg_color;*/
        }
    }

    .option_tick{
        visibility:hidden;
        /*display:none;*/
        float:left;
        width: 20px;
        margin-right: 0;
    }
    
    .role_option_text{
        .desc{
            font-size:1em;
            margin-bottom:5px;
            display:block;
        }
        .role{
            font-weight:bold;
            font-size:0.8em;
        }
    }

    .selected{
        background-color:@selected_bg_color;
        font-weight:bold;

        .option_tick{
            display:initial;
            visibility:visible;
            color:@sal_blue;
        }

        .option_text{
            float:right;
        }
    }

    .disabled, 
    .disabled:hover{
        background-color: #eeeeee;
        color:#dddddd;
    }

    .scroll_down_msg{
        display: none;
    }
}

.for_better_results{
    margin-bottom:64px;
}

.competency_anchor,
.select_level a,
.select_level a:visited,
.scroll_link:visited,
.scroll_link{
    color: @link_blue;
    text-decoration:none;
}

.courses{
    .sorter{
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select:none;

        text-align:center;
        /*display:none;*/

        a{
            display:inline-block;
            margin-left:10px;
            text-decoration:none;
            color:@link_blue;
            cursor:pointer;
            &:visited{
                color:@link_blue;
            }
        }

        .symbol{
            color:black;
            margin-left:10px;
        }
    }

    width:100%;
    p, h2{
        text-align:center;
    }

    h2{
        font-size:3.5em;
        font-weight: normal;
        color: @sal_blue;
        margin-bottom:20px;
    }
    
    .course_table{
        width:100%;
        font-size:1.4em;


        thead{
            font-weight:bold;
            td{
                white-space: nowrap;
                &:first-of-type{
                    width:400px;
                }
                &:last-of-type{
                    width:200px;
                }
            }
            .sorter{
                text-align:left;
                padding-left:0.7em;
                margin-left:0;
                cursor:pointer;
                a{
                    color:black;
                    margin-left:5px;
                }
            }        
        }

        tr{
            border-bottom: 1px solid #cbcbcb;
                text-align:left;
        }
    }
}

.course_notice{
    text-align:center;
    // Prevent height flash-change before the div gets rendered
    min-height:112px; 
}

.why_learn_qn{
    .question{
        margin-top:0;
        margin-bottom:0;
    }
}


.role_picker{
    .question{
        margin-top:0;
    }

    .level{
        font-size:40px;
        font-weight:bold;
        margin-bottom:40px;
        margin-top:40px;
    }

    .select_level{
        a{
            margin-right:10px;
        }

        a:last-of-type{
            margin-right:0px;
        }
    }
}
/* ... */

